fixed size of popup on mobile
fixed size of popup on mobile

--- a/src/psyche/style.css
+++ b/src/psyche/style.css
@@ -68,17 +68,24 @@
 }
 
 .image-popup img {
-  max-width: 100%; 
-  max-height: 100%; 
-  height: auto; 
+  max-width: 130%; 
+  max-height: 130%; 
+  height: auto;
   width: auto; 
 }
 
 @media (max-width: 600px) {
   .image-popup {
-    max-width: 95vw; 
-    max-height: 95vh; 
-    padding: 10px; 
+    max-width: 200vw; 
+    max-height: 200vh;
+    padding: 0px;
+  }
+
+  .image-popup img {
+    max-width: 100vw; 
+    max-height: 100vw; 
+    height: auto;
+    width: auto; 
   }
 }
 
